fixed tradeId key, added confirm buttons, added results decoy

--- a/public/index.html
+++ b/public/index.html
@@ -122,8 +122,8 @@
             </div>
             <div class="process-data-buttons">
                 <button class="btn" type="button">Instructions</button> <!--prompts a new screen with instructions on how to use-->
-                <button class="btn" type="submit">Results</button> <!--Prompts detailed results for input trades-->
-                <button class="btn" type="button">Submit to Db & clear Form</button> <!--Saves to excel/server-->
+                <button class="btn" type="submit" onclick="resultButton()">Results</button> <!--Prompts detailed results for input trades-->
+                <button class="btn" type="button" onclick="submitToDB()">Submit to Db & clear Form</button> <!--Saves to excel/server-->
             </div>          
             <div class="trade-table">
                 <table id="trade-table">
